pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/input-type-object.ub
factory: {
  inputs: {
    cfg: {
      type: object({
        name: string
        name: integer
      })
    }
  }
}
